--- a/apps.json
+++ b/apps.json
@@ -11,5 +11,21 @@
     "icon": "apks/images.png",
     "download_url": "apks/Picasso-App-Latest-Version-V-10.8.4.apk",
     "sha256": ""
+  },
+
+  {
+    "name": "RINGZMAIN",
+    "icon": "images/default.png",
+    "file": "apps/RingzMain.apk"
+  },
+  {
+    "name": "ALLMOVIELAND_LATEST",
+    "icon": "images/default.png",
+    "file": "apps/allmovieland_latest.apk"
+  },
+  {
+    "name": "APP20",
+    "icon": "images/default.png",
+    "file": "apps/app20.apk"
   }
 ]
