--- a/apps.json
+++ b/apps.json
@@ -11,7 +11,36 @@
     "icon": "apks/images.png",
     "download_url": "apks/Picasso-App-Latest-Version-V-10.8.4.apk",
     "sha256": ""
-  }
+  },
 
-  
+
+{
+    "name": "RingzMain",
+    "version": "v1.0.0",
+    "size": "158.9 MB",
+    "updated": "2025-08-31",
+    "minsdk": 21,
+    "icon": "images/default.png",
+    "file": "apps/RingzMain.apk"
+  },
+  {
+    "name": "allmovieland_latest",
+    "version": "v1.0.0",
+    "size": "16.5 MB",
+    "updated": "2025-08-31",
+    "minsdk": 21,
+    "icon": "images/default.png",
+    "file": "apps/allmovieland_latest.apk"
+  },
+  {
+    "name": "app20",
+    "version": "v1.0.0",
+    "size": "29.9 MB",
+    "updated": "2025-08-31",
+    "minsdk": 21,
+    "icon": "images/default.png",
+    "file": "apps/app20.apk"
+  }  
+
+
 ]
