--- a/apps.json
+++ b/apps.json
@@ -1,27 +1,24 @@
 [
-
-{
-    "name": "Pikashow",
-   
-    "version": "10.8.2",
-    "description": "Watch all latest movies and series on this app",
-    "size_bytes": 17000000,
-    "min_sdk": 21,
-    "updated": "2025-08-31",
-    "icon": "apks/images.png",
-    "download_url": "apks/Picasso-App-Latest-Version-V-10.8.4.apk",
-    "sha256": ""
-  },
-{
-    "name": "Allmovieland",
-   
-    "version": "8.0.3",
-    "description": "Watch all latest movies and series on this app",
-    "size_bytes": 25000000,
-    "min_sdk": 21,
-    "updated": "2025-08-31",
-    "icon": "https://github.com/Altamas1/getapp/releases/download/V2/images.jpeg",
-    "download_url": "https://github.com/Altamas1/getapp/releases/download/V1/allmovieland_latest.apk",
-    "sha256": ""
-  }
+  {
+    "name": "WhatsApp",
+    "version": "2.24.15",
+    "description": "Chat with friends and family instantly.",
+    "size": "54 MB",
+    "updated": "2025-08-30",
+    "sdk": "Android 5.0+",
+    "icon": "apks/whatsapp.png",
+    "file": "apks/whatsapp.apk",
+    "hash": "abc1234567890"
+  },
+  {
+    "name": "Instagram",
+    "version": "305.1",
+    "description": "Share photos and videos with your followers.",
+    "size": "80 MB",
+    "updated": "2025-08-25",
+    "sdk": "Android 6.0+",
+    "icon": "apks/instagram.png",
+    "file": "apks/instagram.apk",
+    "hash": "xyz987654321"
+  }
 ]
