--- a/apps.json
+++ b/apps.json
@@ -18,7 +18,7 @@
     "updated": "2025-08-31",
     "sdk": "Android 10.0+",
     "icon": "https://github.com/Altamas1/getapp/releases/download/V2/Ringz.jpeg",
-    "file": "https://github.com/Altamas1/getapp/releases/download/V1/RingzMain.apk",
+    "file": "https://ringzapk.com/#google_vignette",
     "hash": "xyz987654321"
   }
 ]
