--- a/config.yml
+++ b/config.yml
@@ -1,1 +1,20 @@
-.
+backend:
+  name: git-gateway
+  branch: main   # 👈 yaha apne repo ka default branch likho (zyaadatar 'main' hota hai)
+
+media_folder: "assets/uploads"   # Images kaha save hongi
+public_folder: "/assets/uploads"
+
+collections:
+  - name: "posts"
+    label: "Blog Posts"
+    folder: "posts"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { name: "title", label: "Title", widget: "string" }
+      - { name: "date", label: "Date", widget: "datetime" }
+      - { name: "author", label: "Author", widget: "string", default: "TumharaDesh Team" }
+      - { name: "category", label: "Category", widget: "string" }
+      - { name: "thumbnail", label: "Thumbnail", widget: "image" }
+      - { name: "body", label: "Body", widget: "markdown" }
